# meetropolis

./: .budgetignore  .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .gitmodules  .lintstagedrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile.stage  GOVERNANCE.md  LIBRARY_BOUNDARIES.md  LICENSE  LICENSING.md  Little_Bits_Office_tileset.rar  MIGRATION.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TEST_STRATEGY.md  TRADEMARKS.md  commitlint.config.mjs  compose.override.traefik.yaml.example  compose.yaml  debug-issues.js  docker-compose.dev.yml  docker-compose.meetropolis.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  eslint.config.mjs  (+7 more)
apps/web/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/local-client/: debug.html  index.html  mini.html
apps/web/src-tauri/local-client/assets/: buildAudioPipeline-7WWhVCqT.js  buildAudioPipeline-7WWhVCqT.js.map  buildAudioPipeline-BLvV96j_.js  buildAudioPipeline-BLvV96j_.js.map  buildAudioPipeline-CjEIoHN6.js  buildAudioPipeline-CjEIoHN6.js.map  buildAudioPipeline-CrPqVvI3.js  buildAudioPipeline-CrPqVvI3.js.map  buildAudioPipeline-DIOhn21d.js  buildAudioPipeline-DIOhn21d.js.map  buildAudioPipeline-DvMcdaZy.js  buildAudioPipeline-DvMcdaZy.js.map  core-BEOw45JP.js  core-BEOw45JP.js.map  (+33 more)
apps/web/src-tauri/src/: audio.rs  main.rs
(+937 files in other folders)
