[package]
name = "meetropolis"
version = "0.1.0"
description = "Meetropolis Desktop App"
authors = ["Meetropolis"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[features]
# this feature is used for production builds or when frontend uses a local dev server
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
